--- a/parallel_programming/hw1/Makefile
+++ b/parallel_programming/hw1/Makefile
@@ -1,6 +1,6 @@
 #BOOST_DIR=/usr/local/include/boost
 SRC_DIR=src/
-LIBRARIES=-lboost_program_options -lboost_system -lboost_filesystem -lboost_serialization -lboost_thread
+LIBRARIES=-lboost_program_options -lboost_system -lboost_filesystem -lboost_serialization -lboost_thread -lboost_atomic
 BUILD_DIR=obj
 EXECUTABLES=thread_pool_app
 FLAGS=-std=c++0x
